<resources>
    <string name="app_name">مربی خصوصی</string>
    <string name="app_name_long">Privacy Friendly Circuit Trainer</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>
    <string name="save">ذخیره</string>
    <string name="edit">ویرایش</string>
    <string name="delete">حدف</string>
    <string name="set">تنظیم</string>
    <string name="action_help">راهنما</string>
    <string name="action_about">درباره</string>
    <string name="action_tutorial">آموزش</string>
    <string name="action_settings">تنطیمات</string>
    <string name="action_main">صفحه اصلی</string>
    <string name="action_statistics">آمار</string>
    <string name="action_exercisesets">> مجموعه ورزش</string>
    <string name="action_exercises">تمرینات</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_button_text">Full Width Button</string>
    <string name="main_button_disabled_text">Inactive Button</string>
    <string name="main_text_work_interval">فاصله تمرین</string>
    <string name="main_text_rest_interval">فاصله استراحت</string>
    <string name="main_text_sets">مجموعه</string>
    <string name="main_text_start">شروع  ></string>
    <string name="main_text_title">لطفا انتخاب کنید:</string>
    <string name="main_block_periodization_headline">پیکربندی:</string>
    <string name="main_block_periodization">مسدود کردن دوره</string>
    <string name="main_block_periodization_info">Block Periodization</string>
    <string name="main_block_periodization_sets">قبل از شروع استراحت فاصله را تنظیم کنید:</string>
    <string name="main_block_periodization_duration">مدت زمان استراحت:</string>
    <string name="main_button_1">1</string>
    <string name="main_button_2">2</string>
    <string name="main_button_3">3</string>
    <string name="main_button_4">4</string>
    <string name="main_button_5">5</string>
    <string name="main_text_fullwithbutton_desc">A button that uses the full width of the screen looks like this:</string>
    <string name="main_text_disabledbutton_desc">A disabled button looks like this (any size):</string>
    <string name="main_text_normalbutton_desc">There are multiple ways to display basic buttons. Button 1 is the basic button. If you wish to separate a button visually, use button 2. The buttons 3&#8211;5 are examples for highlighted buttons. Depending on the app other colors are possible.</string>
    <string name="main_button_welcomedialog_text">Use the button in the lower left corner to call the Welcome Dialog.</string>
    <string name="use_exercise_sets">از مجموعه ورزش استفاده کنید</string>
    <string name="workout_headline_start_timer">شروع در</string>
    <string name="workout_headline_workout">کار کنید</string>
    <string name="workout_headline_done">انجام</string>
    <string name="workout_headline_rest">باقی مانده</string>
    <string name="workout_info">مجموعه</string>
    <string name="workout_finished_text">موفق شدی!</string>
    <string name="workout_finished_calories_text">مقدار کالری سوزانده:</string>
    <string name="workout_finished_calories_unit">کیلو کالری</string>
    <string name="workout_block_periodization_headline">Block Break</string>
    <string name="workout_finish_button">پایان</string>
    <string name="title_activity_exercisesets">مجموعه ورزش</string>
    <string name="exercisesets_lists_empty">هیچ مجموعه ورزشی ندارید</string>
    <string name="title_activity_exercises">تمرینات</string>
    <string name="exercises_lists_empty">هیچ تمرینی ندارید</string>
    <string name="workout_notification_time">زمان</string>
    <string name="workout_notification_pause">وقفه</string>
    <string name="workout_notification_resume">ادامه</string>
    <string name="reminder_notification_title">مربی خصوصی</string>
    <string name="help">راهنما</string>
    <string name="help_whatis">مربی خصوصی چیست؟</string>
    <string name="help_whatis_answer">مربی خصوصی حفظ حریم خصوصی کاربر را در طول جلسه آموزش مدار خود پشتیبانی می کند. این مجموعه ای از تنظیم تایمر را برای تمرین ها و مراحل استراحت و همچنین چندین ویژگی دیگر فراهم می کند.</string>
    <string name="help_feature_workout_timer">Feature: Workokut timer</string>
    <string name="help_feature_workout_timer_answer">After configuring the set of timers in the main menu you can start the workout routine by pressing the start button. The workout view has animations and sound output features which can be turned on and off inside the settings menu.</string>
    <string name="help_feature_motivation_alert">Feature: Motivation alert</string>
    <string name="help_feature_motivation_alert_answer">The app can show you motivation alerts to remind you of planned workout sessions. You can define the time of day and the notification texts inside the settings menu.</string>
    <string name="help_feature_block_periodization">Feature: Block Periodization</string>
    <string name="help_feature_block_periodization_answer">When scheduling the timers you may also choose the block periodization feature. This feature allows you to configure longer, separate breaks in between the exercises. This way the workout can be split into multiple high intensity workout cycles.</string>
    <string name="help_feature_workout_history">Feature: Workout history</string>
    <string name="help_feature_workout_history_answer">The app can collect statistics about your performed workout sessions. The collected data comprises of the time spend working out and the calories burnt while exercising. The accuracy of the calories calculation can be improved by configuring the necessary user data in the settings menu. The collection of this data can be deleted as well as turned on and off inside the settings menu.</string>
    <string name="help_feature_own_exercises">Feature: Exercise Sets</string>
    <string name="help_feature_own_exercises_answer">The app allows you to create your own Exercise Sets for the circuit training. Therefore you can combine your own exercises to exercise sets. The image assigned to an exercise is displayed during the workout. In addition, the exercise sets can be repeated during a workout. For this you can set the number of rounds before starting the workout.</string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">This app does not include any tracking mechanisms or advertisement. It further does not share any user information which may be collected during the usage of this app.</string>
    <string name="help_permission">Which permissions are required by the app?</string>
    <string name="help_permission_answer">Privacy Friendly Training requires the permission "Receive Boot Completed". It is used to reschedule the motivation alert after a reboot. If the permission is not granted, the app has to be launched first to reschedule the daily reminder notification.</string>
    <string name="about">درباره</string>
    <string name="version_number">ورژن</string>
    <string name="about_author">نویسندگان: </string>
    <string name="about_author_names" translatable="false">امین اسودی</string>
    <string name="about_author_contributors">و مشارکت کنندگان.</string>
    <string name="about_affiliation">در ارتباط با</string>
    <string name="privacy_friendly">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد..</string>
    <string name="more_info">اطلاعات بیشتر را می توان در اینجا مشاهده کرد:</string>
    <string name="github" translatable="false"><a href="https://github.com/Amin-asvadi">لینک گیت</a></string>
    <string name="url" translatable="false"><a href="https://github.com/Amin-asvadi">لینک گیت</a></string>
    <string name="about_third_party_libs">The app uses <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a> from Philipp Jahoda (Apache 2 License).</string>
    <string name="title_activity_settings">تنظیمات</string>
    <string name="pref_header_general">پیشرفته</string>
    <string name="pref_header_workout">تمرین</string>
    <string name="pref_voice_countdown_workout_title">Voice Countdown Workout</string>
    <string name="pref_voice_countdown_workout_summary">A voice counts down the final seconds of a workout.</string>
    <string name="pref_voice_countdown_rest_title">Voice Countdown Rest</string>
    <string name="pref_voice_countdown_rest_summary">A voice counts down the final seconds of the rest phase.</string>
    <string name="pref_sound_rythm_title">Timer signal</string>
    <string name="pref_sound_rythm_summary">A signal tone on for each countdown during the workout.</string>
    <string name="pref_voice_halftime_title">Voice Halftime</string>
    <string name="pref_voice_halftime_summary">A voice says when half the time of the workout passed.</string>
    <string name="pref_header_notification">Notifications</string>
    <string name="pref_header_statistics">Statistics</string>
    <string name="pref_header_personalization">Personalization</string>
    <string name="pref_title_notification_motivation_alert_time">Motivation alert time</string>
    <string name="pref_title_notification_delete_statistics_alert">Delete Statistics</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_keep_screen_on_switch">Keep Screen On</string>
    <string name="pref_keep_screen_on_switch_summary">The Screen remains turned on during the workout.</string>
    <string name="pref_start_timer_switch">Start timer</string>
    <string name="pref_start_timer_switch_summary">A start timer is shown before the workout begins.</string>
    <string name="pref_blinking_progress_bar">Blinking progress bar</string>
    <string name="pref_blinking_progress_bar_summary">The progress bar of the workout timer blinks during the final seconds.</string>
    <string name="pref_voice_output">Voice Output</string>
    <string name="pref_voice_output_summary">A voice counts down the final seconds of each workout and rest phase.</string>
    <string name="pref_title_motivation_alert_switch">Motivation alert</string>
    <string name="pref_notification_motivation_alert_texts">Motivation texts</string>
    <string name="title_activity_motivation_alert_texts">Motivation alert texts</string>
    <string name="pref_statistics_title">Statistics</string>
    <string name="pref_delete_statistics_dialog_title">Delete statistics</string>
    <string name="pref_delete_statistics_dialog_info">Do you want to delete all saved statistics?</string>
    <string name="pref_cancel_workout_check_title">Alert dialog on workout abort</string>
    <string name="pref_cancel_workout_check_summary">Show an alert whenever you try to abort the workout.</string>
    <string name="pref_delete_statistics_dialog_toast">Statistics have been reset!</string>
    <string name="pref_calories_counter_title">Calories counter</string>
    <string name="pref_calories_counter_summary">Count the calories burnt during workout.</string>
    <string name="pref_group_title_personal_settings">Personalization</string>
    <string name="pref_title_weight">وزن (کیلو گرم)</string>
    <string name="pref_title_age">سن</string>
    <string name="main_name" translatable="false">نام :</string>
    <string name="main_height" translatable="false">قد :</string>
    <string name="main_weight" translatable="false">وزن :</string>
    <string name="main_age" translatable="false">سن :</string>
    <string name="main_set_counter" translatable="false">شمارنده ست</string>
</resources>