<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:background="@drawable/background_main">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="100"
                android:orientation="horizontal">
              <ImageView
                  android:layout_width="100dp"
                  android:layout_height="100dp"
                  android:layout_weight="1"
                  android:scaleType="fitXY"
                  android:layout_gravity="center_vertical"
                  android:layout_marginStart="20dp"
                  android:src="@drawable/womanprofile"/>
                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="20"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_name"
                        android:textStyle="bold"
                        android:fontFamily="@font/vazir"
                        android:textColor="@color/white"

                        android:textSize="16sp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_height"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="@font/vazir"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"/>
                    <TextView
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_weight"
                        android:fontFamily="@font/vazir"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"/>
                    <TextView
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_age"
                        android:fontFamily="@font/vazir"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>
        <GridLayout
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:columnCount="2"

            android:rowCount="3">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@color/red"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="130dp"
                        android:scaleType="fitXY"
                        android:layout_height="80dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/dambel_man"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/main_set_counter"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:fontFamily="@font/vazir"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@color/red"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@color/red"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@color/red"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@color/red"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@color/red"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@color/red"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@color/red"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">

            </android.support.v7.widget.CardView>

        </GridLayout>
    </LinearLayout>


</ScrollView>